iplemented popup form in shop

--- a/app/contact.html
+++ b/app/contact.html
@@ -121,52 +121,55 @@
         </span>
     </div>
     <div class="map-info">
+      <div class="map-wrapper">
         <div class="map-info__block">
-            <div class="block__left">
-                <p> Rynek 8 <br>
-                    50-529 Wrocław <br>
-                    tel: 23 325 25 32 <br>
-                    travelshore@gmail.com
-                </p>
-            </div>
-            <div class="block__right">
-                <p>Godziny otwarcia:<br>
-                    09:00 - 17:00<br></p>
-            </div>
+          <div class="block__left">
+              <p> Rynek 8 <br>
+                  50-529 Wrocław <br>
+                  tel: 23 325 25 32 <br>
+                  travelshore@gmail.com
+              </p>
+          </div>
+          <div class="block__right">
+            <p>Godziny otwarcia:<br>
+              09:00 - 17:00<br>
+            </p>
         </div>
-        <div class="map-info__form">
-            <div class="wrap">
-                <div class="contact-forms">
-                <form action="#" method="post" id="mailForm">
-                    <div class="contact-left">
-                    <div class="styled-input agile-styled-input-top">
-                        <input type="text" id="name" name="name" required="">
-                        <label>Imię</label>
-                        <span></span>
-                    </div>
+      </div>
+    </div>
+    <div class="map-info__form">
+        <div class="wrap">
+          <div class="contact-forms">
+            <form action="#" method="post" id="mailForm">
+                <div class="contact-left">
+                  <div class="styled-input agile-styled-input-top">
+                      <input type="text" id="name" name="name" required="">
+                      <label>Imię</label>
+                      <span></span>
+                  </div>
                     <div class="styled-input">
-                        <input type="email" id="email" name="email" required=""> 
-                        <label>Email</label>
-                        <span></span>
+                      <input type="email" id="email" name="email" required=""> 
+                      <label>Email</label>
+                      <span></span>
                     </div> 
                     <div class="styled-input">
-                        <input type="text" id="phone" name="phone" required="">
-                        <label>Numer telefonu</label>
-                        <span></span>
+                      <input type="text" id="phone" name="phone" required="">
+                      <label>Numer telefonu</label>
+                      <span></span>
                     </div>
-                    </div>
-                    <div class="contact-right">
-                    <div class="styled-input agileits-input">
-                        <textarea name="message"  id="message" required=""></textarea>
-                        <label>Wiadomość</label>
-                        <span></span>
-                        <button type="button" id="sendMail" class="button">wyślij</button>
-                </form>
-                <div id="errorMess" class="error"></div>
-                </div>
-            </div>
+                  </div>
+                  <div class="contact-right">
+                  <div class="styled-input agileits-input">
+                    <textarea name="message"  id="message" required=""></textarea>
+                    <label>Wiadomość</label>
+                    <span></span>
+                <button type="button" id="sendMail" class="button">wyślij</button>
+            </form>
+            <div id="errorMess" class="error"></div>
+          </div>
         </div>
     </div>
+  </div>
 </div>
 
        <!-- Footer -->
