--- a/app/index.html
+++ b/app/index.html
@@ -600,7 +600,7 @@
     <div class="travel-slider__subtitle">
       <div class="subtitle">
         <div class="suptitle-left">aktualne oferty</div>
-        <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+        <div class="subtitle__head">Twoje wymarzone wakacje</div>
       </div>
     </div>
     <div class="travel-grid">
@@ -908,9 +908,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1004,9 +1002,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1099,9 +1095,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1194,9 +1188,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1289,9 +1281,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1384,9 +1374,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1479,9 +1467,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1574,9 +1560,7 @@
               €799 <sup>99</sup>
             </div>
             <div class="shop__slider__btn">
-              <a href="#" class="button">
-                zobacz <span> | </span> więcej
-              </a>
+              <button class="btn">skontaktuj się</button>
             </div>
           </div>
           <div class="shop__slider-content">
@@ -1638,6 +1622,42 @@
         </div>
       </div>
     </div>
+    <div class="relax-dot">
+      <div class="profile">
+        <div class="wrap">
+          <div class="contact-form">
+            <form action="#" method="post" id="mailForm">
+              <div class="contact-left">
+                <div class="styled-input agile-styled-input-top">
+                  <input type="text" id="name" name="name" required="">
+                  <label>Imię</label>
+                  <span></span>
+                </div>
+                <div class="styled-input">
+                  <input type="email" id="email" name="email" required=""> 
+                  <label>Email</label>
+                  <span></span>
+                </div> 
+                <div class="styled-input">
+                  <input type="text" id="phone" name="phone" required="">
+                  <label>Numer telefonu</label>
+                  <span></span>
+                </div>
+              </div>
+              <div class="contact-right">
+                <div class="styled-input agileits-input">
+                  <textarea name="message"  id="message" required=""></textarea>
+                  <label>Wiadomość</label>
+                  <span></span>
+                  <button type="button" id="sendMail" class="button">wyślij</button>
+                  <div class="form-close"></div>
+            </form>
+            <div id="errorMess" class="error"></div>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
   </section>
   <!-- Shop -->
 
