--- a/app/relax.html
+++ b/app/relax.html
@@ -226,7 +226,7 @@
     </a>
   </div>
   <div class="relax-slider__btn">
-    <buton class="btn">rezerwacja</buton>
+    <button class="btn">rezerwacja</button>
   </div>
     <!-- Form -->
       <div class="relax-dot">
