fixed  adaptive in header-menu

--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,7 @@
       </div>
   </div>
       <div class="header__title">
-      travel shore
+      twoje najlepsze wakacje
       </div>
       <div class="header__arrows">
         <a href="#Sport" class="animated fadeInDown infinite slower">
