fixed adaptive in relax

--- a/app/relax.html
+++ b/app/relax.html
@@ -229,76 +229,78 @@
     <button class="btn">rezerwacja</button>
   </div>
     <!-- Form -->
-      <div class="relax-dot">
-        <div class="profile">
-          <div class="wrap">
-            <div class="contact-form">
-              <form action="#" method="post" id="mailForm">
-                <div class="contact-left">
-                  <div class="styled-input agile-styled-input-top">
-                    <input type="text" id="name" name="name" required="">
-                    <label>Imię</label>
-                    <span></span>
-                  </div>
-                  <div class="styled-input">
-                    <input type="email" id="email" name="email" required=""> 
-                    <label>Email</label>
-                    <span></span>
-                  </div> 
-                  <div class="styled-input">
-                    <input type="text" id="phone" name="phone" required="">
-                    <label>Numer telefonu</label>
-                    <span></span>
-                  </div>
-                  <div class="styled-input">
-                    <select id="country" name="country">
-                      <option value="">Wybierz kraj</option>
-                      <option value="Australia">Australia</option>
-                      <option value="Spain">Spain</option>
-                      <option value="Bahamas">Bahamas</option>
-                      <option value="Miami">Miami</option>
-                      <option value="Brazil">Brazil</option>
-                      <option value="Cuba">Cuba</option>
-                      <option value="Indonesia">Indonesia</option>
-                      <option value="Fiji">Fiji</option>
-                    </select>
-                  </div>
-                  <div class="styled-input">
-                    <select id="people" name="people">
-                      <option value="">Liczba osób - dziecko do roku bezpłatnie</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                      <option value="7">7</option>
-                      <option value="8">8</option>
-                      <option value="9">9</option>
-                      <option value="10">10</option>
-                      <option value="11">11</option>
-                      <option value="12">12</option>
-                      <option value="13">13</option>
-                      <option value="14">14</option>
-                    </select>
-                  </div>
-                  <div class="styled-date">
-                    <input type="date" id="date" name="date">
-                  </div>
+  <div class="relax-form">
+    <div class="relax-dot">
+      <div class="profile">
+        <div class="wrap">
+          <div class="contact-form">
+            <form action="#" method="post" id="mailForm">
+              <div class="contact-left">
+                <div class="styled-input agile-styled-input-top">
+                  <input type="text" id="name" name="name" required="">
+                  <label>Imię</label>
+                  <span></span>
                 </div>
-                <div class="contact-right">
-                  <div class="styled-input agileits-input">
-                    <textarea name="message"  id="message" required=""></textarea>
-                    <label>Wiadomość</label>
-                    <span></span>
-                    <button type="button" id="sendMail" class="button">rezerwacja</button>
-                    <div class="form-close"></div>
-              </form>
-              <div id="errorMess" class="error"></div>
-            </div>
+                <div class="styled-input">
+                  <input type="email" id="email" name="email" required=""> 
+                  <label>Email</label>
+                  <span></span>
+                </div> 
+                <div class="styled-input">
+                  <input type="text" id="phone" name="phone" required="">
+                  <label>Numer telefonu</label>
+                  <span></span>
+                </div>
+                <div class="styled-input">
+                  <select id="country" name="country">
+                    <option value="">Wybierz kraj</option>
+                    <option value="Australia">Australia</option>
+                    <option value="Spain">Spain</option>
+                    <option value="Bahamas">Bahamas</option>
+                    <option value="Miami">Miami</option>
+                    <option value="Brazil">Brazil</option>
+                    <option value="Cuba">Cuba</option>
+                    <option value="Indonesia">Indonesia</option>
+                    <option value="Fiji">Fiji</option>
+                  </select>
+                </div>
+                <div class="styled-input">
+                  <select id="people" name="people">
+                    <option value="">Liczba osób - dziecko do roku bezpłatnie</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                  </select>
+                </div>
+                <div class="styled-date">
+                  <input type="date" id="date" name="date">
+                </div>
+              </div>
+              <div class="contact-right">
+                <div class="styled-input agileits-input">
+                  <textarea name="message"  id="message" required=""></textarea>
+                  <label>Wiadomość</label>
+                  <span></span>
+                  <button type="button" id="sendMail" class="button">rezerwacja</button>
+                  <div class="form-close"></div>
+            </form>
+            <div id="errorMess" class="error"></div>
           </div>
         </div>
-      </div> 
+      </div>
+    </div> 
+  </div>
     <!-- Form --> 
    <!-- Footer -->
    <footer class="footer" id="footer">
