--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="#Travel" class="list-item">
+                      <a href="relax.html" class="list-item">
                       <span>Podróż</span>
                       </a>
                       <ul class="sub-header__list">
