--- a/app/index.html
+++ b/app/index.html
@@ -1622,6 +1622,12 @@
         </div>
       </div>
     </div>
+    <div class="relax__arrows">
+      <h2>skontaktuj się z nami</h2>
+      <a href="#footer" class="animated fadeInDown infinite slower">
+          <img src="img/relax/down1.png" alt="">
+      </a>
+    </div>
     <div class="relax-dot">
       <div class="profile">
         <div class="wrap">
