fixed form in contact.html

--- a/app/index.html
+++ b/app/index.html
@@ -882,7 +882,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -976,7 +976,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -1069,7 +1069,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -1162,7 +1162,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -1255,7 +1255,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -1348,7 +1348,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -1441,7 +1441,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
@@ -1534,7 +1534,7 @@
           <div class="shop__slider-info">
             <div class="descr-shop">
               <div class="suptitle-right">
-                wszystko, czego potrzebujesz na idealne wakacje
+                czego potrzebujesz na wakacje?
               </div>
               <div class="descr__head-shop">North Nugget TT Deska surfingowa
               </div>
