--- a/app/relax.html
+++ b/app/relax.html
@@ -107,6 +107,9 @@
             </nav>
         </div>
     </div>
+    <div class="header__title">
+      twoje najlepsze wakacje
+      </div>
         <div class="container">
             <div class="relax__arrows">
                 <a href="#Sport" class="animated fadeInDown infinite slower">
