--- a/app/contact.html
+++ b/app/contact.html
@@ -108,7 +108,9 @@
 </section>
 
 <div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.9124240763736!2d17.02799011596124!3d51.11007594749629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc27505290393%3A0x36c138edd5a238df!2sRynek%208%2C%2050-529%20Wroc%C5%82aw!5e0!3m2!1sru!2spl!4v1584268985333!5m2!1sru!2spl" width="100%" height="700px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <div class="map-iframe">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.9124240763736!2d17.02799011596124!3d51.11007594749629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc27505290393%3A0x36c138edd5a238df!2sRynek%208%2C%2050-529%20Wroc%C5%82aw!5e0!3m2!1sru!2spl!4v1584268985333!5m2!1sru!2spl"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
     <div class="relax__arrows">
         <a href="#Sport" class="animated fadeInDown infinite slower">
             <img src="img/relax/down.png" alt="">
