--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,7 @@
       </div>
   </div>
       <div class="header__title">
-      twoje najlepsze wakacje
+        twoje jedyne biuro podróży
       </div>
       <div class="header__arrows">
         <a href="#Sport" class="animated fadeInDown infinite slower">
@@ -116,9 +116,9 @@
      <div class="header__slider">
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
-          <div class="slider-item__info-suptitle suptitle-left">
+          <div class="slider-item__info-suptitle suptitle-left animated fadeInLeft delay-1s">
             Najbardziej śnieżnobiała plaża</div>
-          <div class="slider-item__info-title">Whitehaven Beach</div>
+          <div class="slider-item__info-title animated fadeInRight delay-1s">Whitehaven Beach</div>
         </div>
       </div>
       <div class="header__slider-item slider-item">
@@ -171,7 +171,7 @@
         </div>
       </div>
     </div>
-    <div class="slider-dotshead">
+    <div class="slider-dotshead animated fadeInUp delay-1s">
       <div class="slider-dots__item">
         <div class="dots-box">
           <div class="dots-box__number">01</div>
@@ -233,7 +233,7 @@
       </span>
     </div>
       <div class="sport__subtitle">
-        <div class="subtitle">
+        <div class="subtitle wow fadeInRight" data-wow-offset="300">
           <div class="suptitle-left">
             wybierz swoje sportową wakacje
           </div>
@@ -243,7 +243,7 @@
         </div>
       </div>
       <!-- slider-map slider-dots -->
-      <div class="slider-map">
+      <div class="slider-map wow zoomInDown" data-wow-offset="250" data-wow-duration="1s">
         <!-- 1 slider-dots -->
         <div class="slider-dots slider-dots--au">
           <div class="slider-dots__circle"></div>
@@ -597,7 +597,7 @@
         <h3>Podróż</h3>
       </span>
     </div>
-    <div class="travel-slider__subtitle">
+    <div class="travel-slider__subtitle wow fadeInRight" data-wow-offset="100">
       <div class="subtitle">
         <div class="suptitle-left">aktualne oferty</div>
         <div class="subtitle__head">Twoje wymarzone wakacje</div>
@@ -631,7 +631,7 @@
     </div>
     <div class="travel__slider">
       <!-- 1 -->
-      <div class="travel__slider-item travel-slider">
+      <div class="travel__slider-item">
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -912,7 +912,7 @@
             </div>
           </div>
           <div class="shop__slider-content">
-            <div class="surfboard">
+            <div class="surfboard wow fadeInUp" data-wow-offset="400">
               <img src="img/shop/Surfboard.png" alt="">
               <!--1 surfboard-box-->
               <div class="surfboard-box surfboard__position--1">
@@ -947,10 +947,10 @@
               </div>
             </div>
             <div class="shop__extras">
-              <div class="shop__extras-title">extras</div>
+              <div class="shop__extras-title">dodatki</div>
               <div class="shop__extras-inner">
                 <!-- 1 img-->
-                <div class="shop__extras-box">
+                <div class="shop__extras-box wow fadeInUp" data-wow-offset="200">
                   <div class="shop__extras-img">
                   <img src="img/shop/Bracelet.png" alt="">
                 </div>
@@ -958,7 +958,7 @@
                   <div class="shop__extras-price">€799 <sup>99</sup></div>
                 </div>
                 <!-- 2 img-->
-                <div class="shop__extras-box">
+                <div class="shop__extras-box wow fadeInUp" data-wow-offset="200">
                   <div class="shop__extras-img">
                   <img src="img/shop/Wax.png" alt="">
                 </div>
