--- a/app/relax.html
+++ b/app/relax.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- header-price -->
-    <div class="header-price" style="background-image: url(img/header-bg.jpg);"></div>
+    <div class="header-price" style="background-image: url(img/relax/bg.jpg);"></div>
       <!-- Relax -->
     <div class="relax">
       <div class="header-wrap">
@@ -118,12 +118,12 @@
             </div>
             <div class="title">
                 <span>
-                    Oferty
-                    <h3>Oferty</h3>
+                  Hotel
+                    <h3>Hotel</h3>
                 </span>
             </div>
             <div class="relax-subtitle">
-                <div class="subtitle">
+                <div class="subtitle wow fadeInRight" data-wow-offset="400">
                     <div class="suptitle-left">apartamenty znajdują się</div>
                     <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
                 </div>
@@ -131,34 +131,54 @@
             <div class="relax-panel">
                 <div class="slider-dots__clicks">kliknij</div>
                 <div class="relax-panel__heading">
-                    <p>A world class luxury resort</p> 
+                    <p>A Luxury Resort with the Vision of Heaven on Earth</p> 
                 </div>
                 <div class="relax-panel__collapse">
                     <div class="collapse-body">
-                        A world class luxury resortA world class luxury resortA world class luxury resortA wo
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowaniarld class luxury resortA world class luxury resortvA world class luxury resortA world class luxury resortA world class luxury resortA world class luxury resort
-                        Od sezonu 2018/19 Milka jest sponsorem polskiej kadry. Wraz z agencją Event Factory braliśmy udział w opracowywaniu koncepcji kampanii „Milka – Sercem z Naszymi”, której celem jest wspieranie skoczków i zagrzewanie Polaków do kibicowania
+                      The Oatley Family <br>
+                      The Oatleys are a passionate Australian family who believe in highlighting their country’s superb natural beauty and superlative style for the rest of the world. It is this vision that is truly realised at qualia on Hamilton Island. qualia was conceived by the late Bob Oatley, renowned Australian winemaker and patriarch of the Oatley family, whose legacy his son, Sandy, and the Oatley family uphold today.
+                     <br> Design and Architecture <br>
+                      Island-inspired architectural sculptures in specimen timbers, sandstone and glass, frame the surrounding landscape of Australian Eucalypts and the Coral Sea. Subtly elegant, instinctively Australian and distinctively qualia, the resort’s 60 individually designed pavilions flow through to private sun decks and infinity plunge pools overlooking the sea.
+                      Designer Chris Beckingham, has created a lyrical world within a world at qualia, appealing to the senses as well as the soul. Promising privacy and celebrating the purity of the Whitsundays coastal environment, qualia’s structural honesty of elegantly unadorned local timber and stone surrounds every villa with expansive sea vistas, landscaped Australian bushland and tropical palms, effortlessly bringing the outside in without disrupting the view.
                     </div>
                 </div>
             </div>
             <div id="slideshow">
                 <div class="relax__slider">
-                        <!-- 1 -->
+                  <!-- 1 -->
+                   <div class="relax__slider-item relax-slider">
+                      <div class="relax-slider__top" style="background-image: url(img/relax/6.jpg);"></div>
+                      <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
+                  </div>
+                   <!-- 2 -->
+                  <div class="relax__slider-item relax-slider">
+                      <div class="relax-slider__top" style="background-image: url(img/relax/7.jpg);"></div>
+                      <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
+                  </div>
+                     <!-- 3 -->
                     <div class="relax__slider-item relax-slider">
-                        <div class="relax-slider__top" style="background-image: url(img/header-bg.jpg);"></div>
-                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"><!--descr тут стоял--></div>
+                        <div class="relax-slider__top" style="background-image: url(img/relax/1.jpg);"></div>
+                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
                     </div>
-                     <!-- 2 -->
+                     <!-- 4 -->
+                    <div class="relax__slider-item relax-slider">
+                        <div class="relax-slider__top" style="background-image: url(img/relax/2.jpg);"></div>
+                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
+                    </div>
+                     <!-- 5 -->
+                    <div class="relax__slider-item relax-slider">
+                        <div class="relax-slider__top" style="background-image: url(img/relax/3.jpg);"></div>
+                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
+                    </div>
+                     <!-- 6 -->
                      <div class="relax__slider-item relax-slider">
-                        <div class="relax-slider__top" style="background-image: url(img/travel-bg5.png);"></div>
-                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"><!--descr тут стоял--></div>
+                        <div class="relax-slider__top" style="background-image: url(img/relax/4.jpg);"></div>
+                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
+                    </div>
+                     <!-- 7 -->
+                    <div class="relax__slider-item relax-slider">
+                        <div class="relax-slider__top" style="background-image: url(img/relax/5.jpg);"></div>
+                        <div class="relax-slider__descr" style="background-image: url(img/relax/hamm.png);"></div>
                     </div>
                 </div>
             </div>
@@ -166,7 +186,7 @@
     </div>
   <!-- Relax -->
     <div class="price-descr">
-        <div class="descr">
+        <div class="descr wow fadeInLeft" data-wow-offset="250">
             <div class="suptitle-right">
                 Rating        
             </div>
@@ -194,18 +214,18 @@
 
   <!-- kalkulator -->
   <div class="relax-slider__info">
-    <div class="relax-slider__info-item">
+    <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".3s">
       <div class="relax-slider__info-subtitle">Resort</div>
-      <div class="relax-slider__info-title">Whitsundes Queensland</div>
+      <div class="relax-slider__info-title">Qualia Resort</div>
     </div>
-    <div class="relax-slider__info-item">
+    <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".5s">
       <div class="relax-slider__info-subtitle">Liczba nocy</div>
       <div class="relax-slider__info-titleplus">Pobyt na 
         <div class="quantity">
           <input class="night" type="number" min="1" max="20" step="1" value="7">
         </div>nocy</div>
     </div>
-    <div class="relax-slider__info-item">
+    <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".7s">
       <div class="relax-slider__info-subtitle">liczba Gości</div>
       <div class="relax-slider__info-titleplus">
       <div class="quantity">
@@ -213,7 +233,7 @@
       </div>osoby</div>
       <div class="slider-dots__clicks">kliknij</div>
     </div>
-    <div class="relax-slider__info-item">
+    <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".9s">
       <div class="relax-slider__info-subtitle"> cennik</div>
       <div class="relax-slider__info-title">
         <span class="summ" data-night="125" data-quest="75"></span>
