--- a/app/australia.html
+++ b/app/australia.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Relax</title>
+  <title>Australia</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -24,7 +24,7 @@
               <a href="about.html">
                 <span>O firmie</span>
               </a>
-              <a href="about.html">
+              <a href="contact.html">
                 <span>Kontakt</span>
               </a>
             </div>
