iplemendet new html file

--- a/app/index.html
+++ b/app/index.html
@@ -682,7 +682,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€1590 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -711,7 +711,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€1,500 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -740,7 +740,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€1,120 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -769,7 +769,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€1,350 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -798,7 +798,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€890 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -827,7 +827,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€790 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -856,7 +856,7 @@
           </div>
           <div class="travel-slider__info-item">
             <div class="travel-slider__info-subtitle"> cennik</div>
-            <div class="travel-slider__info-title">€1,537 euro
+            <div class="travel-slider__info-title">€1,500 euro
               <span>Podróż w obie strony</span>
             </div>
           </div>
@@ -921,7 +921,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                  łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -931,7 +931,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                  w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
                 <div class="slider-dots__clic">kliknij</div>
               </div>
@@ -942,7 +942,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1015,7 +1015,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1025,7 +1025,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1035,7 +1035,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1108,7 +1108,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1118,7 +1118,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1128,7 +1128,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1201,7 +1201,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1211,7 +1211,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1221,7 +1221,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1294,7 +1294,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1304,7 +1304,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1314,7 +1314,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1387,7 +1387,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1397,7 +1397,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1407,7 +1407,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1480,7 +1480,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1490,7 +1490,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1500,7 +1500,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
@@ -1573,7 +1573,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   łatwy do przenoszenia
                 </div>
               </div>
               <!--2 surfboard-box-->
@@ -1583,7 +1583,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                   w travel-shore tylko profesjonalny sportowy sprzęt 
                 </div>
               </div>
               <!--3 surfboard-box-->
@@ -1593,7 +1593,7 @@
                   <div class="circle-row"></div>
                 </div>
                 <div class="surfboard-box__content">
-                  Double Concave with Vee Shape low point
+                    najlepszy wybór dla podróży
                 </div>
               </div>
             </div>
