--- a/app/about.html
+++ b/app/about.html
@@ -12,7 +12,7 @@
     <div class="header-wrap">
         <div class="header-wrap__body">
             <div class="logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="img/footer/logofooter.png" alt="">
                 </a>
             </div>
@@ -20,7 +20,7 @@
               <a href="about.html">
                 <span>O firmie</span>
               </a>
-              <a href="about.html">
+              <a href="contact.html">
                 <span>Kontakt</span>
               </a>
             </div>
@@ -35,59 +35,59 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#Sport" class="list-item">
+                        <a href="index.html#Sport" class="list-item">
                         <span>Sport</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#Travel" class="list-item">
+                        <a href="index.html#Travel" class="list-item">
                         <span>Podróż</span>
                         </a>
                         <ul class="sub-header__list">
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="australia.html" class="sub-list-item">
                               Australia
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="spain.html" class="sub-list-item">
                               Spain
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="bahamas.html" class="sub-list-item">
                               Bahamas
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="miami.html" class="sub-list-item">
                               Miami
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="brazil.html" class="sub-list-item">
                               Brazil
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="cuba.html" class="sub-list-item">
                               Cuba
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="indonesia.html" class="sub-list-item">
                               Indonesia
                             </a>
                           </li>
                           <li>
-                            <a href="#Shop" class="sub-list-item">
+                            <a href="fiji.html" class="sub-list-item">
                               Fiji
                             </a>
                           </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#Shop" class="list-item">
+                        <a href="index.html#Shop" class="list-item">
                         <span>sklep</span>
                         </a>
                     </li>
