--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <div class="header-wrap">
       <div class="header-wrap__body">
           <div class="logo">
-              <a href="#">
+              <a href="index.html">
                   <img src="img/footer/logofooter.png" alt="">
               </a>
           </div>
@@ -22,7 +22,7 @@
             <a href="about.html">
               <span>O firmie</span>
             </a>
-            <a href="about.html">
+            <a href="contact.html">
               <span>Kontakt</span>
             </a>
           </div>
@@ -42,7 +42,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="relax.html" class="list-item">
+                      <a href="#Travel" class="list-item">
                       <span>Podróż</span>
                       </a>
                       <ul class="sub-header__list">
@@ -485,7 +485,7 @@
             <div class="sport-box__inner-title">Windsurfing</div>
             <div class="sport-box__inner-title-location">Whitehaven Beach <span>|</span> Australia</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="australia.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -498,7 +498,7 @@
             <div class="sport-box__inner-title">Kayaking</div>
             <div class="sport-box__inner-title-location">Las Salinas <span>|</span> Spain </div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="spain.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -511,7 +511,7 @@
             <div class="sport-box__inner-title">Diving</div>
             <div class="sport-box__inner-title-location">Pink Sands Beach <span>|</span> Bahamas</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="bahamas.html" class="btn">
                zobacz <span> | </span> więcej
               </a>
             </div>
@@ -525,7 +525,7 @@
             <div class="sport-box__inner-title">Surfing</div>
             <div class="sport-box__inner-title-location">South Beach <span>|</span> Miami</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="miami.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -538,7 +538,7 @@
             <div class="sport-box__inner-title">Flyboarding</div>
             <div class="sport-box__inner-title-location">Copacabana <span>|</span> Brazil</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="brazil.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -551,7 +551,7 @@
             <div class="sport-box__inner-title">Wakeskating</div>
             <div class="sport-box__inner-title-location">Varadero <span>|</span> Cuba</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="cuba.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -564,7 +564,7 @@
             <div class="sport-box__inner-title">Snorkeling</div>
             <div class="sport-box__inner-title-location">Lombok <span>|</span> Indonesia</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="indonesia.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -577,7 +577,7 @@
             <div class="sport-box__inner-title">Sup Boarding</div>
             <div class="sport-box__inner-title-location">Wakaya <span>|</span> Fiji</div>
             <div class="btn-box">
-              <a href="#" class="btn">
+              <a href="fiji.html" class="btn">
                 zobacz <span> | </span> więcej
               </a>
             </div>
@@ -1670,13 +1670,13 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-item">
-      <a href="#">Kontakt</a>
-      <a href="#">O firmie</a>
+      <a href="contact.html">Kontakt</a>
+      <a href="about.html">O firmie</a>
     </div>
       <div class="footer__cop">
         © 2020 travel shore biuro podróży
       </div>
-        <a href=""><img src="img/footer/logofooter.png" alt=""></a>
+        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
   </footer>
   <!-- Footer -->
   
